Make sure the post item link is available on whitespace

--- a/common/common.scss
+++ b/common/common.scss
@@ -35,3 +35,7 @@ div.menu-links-header button:hover,
 div.menu-links-header button:focus {
   background-color: var(--primary-low);
 }
+
+.link-top-line a {
+  display: block;
+}
